// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`correctly encodes Functions 1`] = `
[
  [Function],
]
`;

exports[`correctly encodes a \`bigint\` 1`] = `
[
  1n,
]
`;

exports[`correctly encodes a HTMLElement 1`] = `
[
  <html>
    <head />
    <body />
  </html>,
]
`;

exports[`correctly encodes nested values 1`] = `
[
  {
    "document": <html>
      <head />
      <body />
    </html>,
    "function": [Function],
    "nested": [
      [
        [
          {
            "constructor": {
              "name": "Promise",
            },
          },
          "__console_feed_remaining__0",
        ],
        "__console_feed_remaining__0",
      ],
      "__console_feed_remaining__0",
    ],
    "recursive": [Circular],
  },
]
`;

exports[`decodes messages 1`] = `
[
  "test",
]
`;

exports[`disables encoding with a flag 1`] = `
[
  {
    "document": <html>
      <head />
      <body />
    </html>,
    "function": [Function],
    "nested": [
      [
        [
          Promise {},
        ],
      ],
    ],
    "recursive": [Circular],
  },
]
`;
